--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "express": "^4.19.2",
     "node": "^22.5.0"
   },
@@ -7,7 +8,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "prisma": "^5.17.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
