--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "node": "^22.5.0"
   },
